[package]
name = "push-guard"
version = "0.1.0"
edition = "2021"
description = "Git push authorization manager for Claude Code hooks"
license = "MIT"
repository = "https://github.com/vikr01/push-guard"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
